Fix mobile layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,7 @@ footer .social {
 
 	.content {
 		padding: 1rem;
+		padding-top: 3rem;
 		width: 100%;
 	}
 }
